@@ -37,7 +37,7 @@ public class GenericAcmeProvider extends AbstractAcmeProvider {
     @Override
     public URL resolve(URI serverUri) {
         try {
-            return serverUri.toURL();
+            return new URL(serverUri.getScheme(), serverUri.getHost(), serverUri.getPort(), serverUri.getPath());
         } catch (MalformedURLException ex) {
             throw new IllegalArgumentException("Bad generic server URI", ex);
         }
